--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,16 @@ APP_SECRET=
 
 # Database
 
-DB_HOST=localhost
+DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
 
 # Mongo
 
-MONGO_HOST=localhost
-MONGO_PORT=27017
-MONGO_NAME=meetapp
+MONGO_HOST=
+MONGO_PORT=
+MONGO_NAME=
 
 # Redis
 
